@@ -1,6 +1,5 @@
 use Test::More tests => 6; # -*- mode: cperl -*-
 use Git;
-use File::Slurp::Tiny qw(write_file);
 
 use lib qw(../lib lib );
 
@@ -34,3 +33,10 @@ is ( @{$commits->hashes()}, 2, "Commit hashes correct");
 is ( $commit_array[1]->{'author'}, $commit_author, "Author changed");
 
 diag( "Testing Git::Repo::Commits $Git::Repo::Commits::VERSION" );
+
+sub write_file {
+  my ($file_name, $file_content) = @_;
+  open my $fh, ">", $file_name;
+  print $fh $file_content;
+  close $fh;
+}
